# 22408Study

./: .gitignore
.obsidian/: workspace.json
algoGit/: Makefile  lg_P1449.c  lg_P3156.c  zoj_6_1.c  zoj_7_1.c
codes/SJJG/2/sqlIST/: CMakeLists.txt
总结与复习/.obsidian/: workspace.json
总结与复习/数学/: 总复习笔记.md
数学/: idea.md  复习点.md  常见公式.md
数学/.obsidian/: GLOBAL_CONFIG_README.md  appearance.json  link-global-config.ps1  make-global.ps1  setup-global-plugins.ps1  sync-to-other-vault.ps1  workspace.json
数学/.smart-env/multi/: 22408_Notion日历导入_每日任务表_5-11至6-30_md.ajson  copilot_copilot-custom-prompts_Explain_like_I_am_5_md.ajson  复习点_md.ajson  王道代码_cmake-build-debug_CMakeFiles_clion-Debug-log_txt.ajson
数学/积分/: 总结.md  提纯.md  结论速记.md
数据结构/.obsidian/: community-plugins.json  workspace.json
数据结构/.smart-env/event_logs/: event_logs.ajson
数据结构/.smart-env/multi/: copilot_copilot-custom-prompts_Make_shorter_md.ajson  copilot_copilot-custom-prompts_Translate_to_Chinese_md.ajson  idea_md.ajson  复习点_md.ajson  常见公式_md.ajson  未命名_base.ajson  (+2 more)
数据结构/笔记/: 图.md
英语/: 听力.md  陌生词.md
英语/.obsidian/: appearance.json  workspace.json
计划/: 22408_5-10至6-30_考研+六级学习计划.md  22408_5-11至6-30_周计划+每日计划.md  22408_Notion导入_CSV_按科目拆分任务_5-11至6-30.csv  22408_Notion日历导入_每日任务表_5-11至6-30.md  22408_Typora-Obsidian_每日打卡_5-11至6-30.md
计划/.obsidian/: appearance.json  community-plugins.json  workspace.json
计划/22408_Obsidian/: 00_使用说明.md  01_看板_Dashboard.md  02_任务库_Tasks.md
计算机408/: .smart-env
计算机408/.obsidian/: community-plugins.json  graph.json  plugins  themes  workspace.json
(+60 files in other folders)
